Added Slack Notification

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,5 @@
-    - name: Notify Slack - Success
-      if: success()
-      run: |
-        curl -X POST -H 'Content-type: application/json' \
-        --data '{"text":"✅ Build Successful!"}' \
-        ${{ secrets.SLACK_WEBHOOK }}
-
-    - name: Notify Slack - Failure
-      if: failure()
-      run: |
-        curl -X POST -H 'Content-type: application/json' \
-        --data '{"text":"❌ Build Failed!"}' \
-        ${{ secrets.SLACK_WEBHOOK }}
+- name: Notify Slack
+  run: |
+    curl -X POST -H 'Content-type: application/json' \
+    --data '{"text":"🚀 CI Build Successful"}' \
+    ${{ secrets.SLACK_WEBHOOK }}
